Реализация динамического переключения представлений

--- a/Bookinist/Views/Windows/MainWindow.xaml
+++ b/Bookinist/Views/Windows/MainWindow.xaml
@@ -6,7 +6,17 @@
         xmlns:local="clr-namespace:Bookinist"
         DataContext="{Binding MainWindowViewModel, Source={StaticResource Locator}}"
         Title="{Binding Title}" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+    <DockPanel>
+        <Menu IsMainMenu="True">
+            <MenuItem Header="Покупатели"  Command="{Binding ShowBuyersViewCommand}"/>
+            <MenuItem Header="Книги" Command="{Binding ShowBooksViewCommand}" />
+            <MenuItem Header="Статистика" Command="{Binding ShowStatisticViewCommand}" />
+        </Menu>
+        <StatusBar>
+            <StatusBarItem>Готов!</StatusBarItem>
+        </StatusBar>
+        <Grid>
+            <ContentControl Content="{Binding CurrentModel}"/>
+        </Grid>
+    </DockPanel>
 </Window>
