--- a/Bookinist/Views/StatisticView.xaml
+++ b/Bookinist/Views/StatisticView.xaml
@@ -1,17 +1,27 @@
 ﻿<UserControl x:Class="Bookinist.Views.StatisticView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" mc:Ignorable="d" 
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Bookinist.Views"
-             mc:Ignorable="d" 
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              d:DesignHeight="450" d:DesignWidth="800">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding ComputeStatisticCommand}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <Grid>
-        <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Статистика"
-                   FontSize="30">
-            <TextBlock.Effect>
-                <DropShadowEffect ShadowDepth="1" />
-            </TextBlock.Effect>
-        </TextBlock>
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+            <TextBlock  Text="Статистика"
+                       FontSize="30">
+                <TextBlock.Effect>
+                    <DropShadowEffect ShadowDepth="1" />
+                </TextBlock.Effect>
+            </TextBlock>
+            <TextBlock HorizontalAlignment="Center" Margin="0, 10">
+                Число книг <Run Text="{Binding BooksCount, Mode=OneWay}"/> штук
+            </TextBlock>
+        </StackPanel>
     </Grid>
 </UserControl>
