--- a/Bookinist/Views/StatisticView.xaml
+++ b/Bookinist/Views/StatisticView.xaml
@@ -5,23 +5,28 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Bookinist.Views"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:vm="clr-namespace:Bookinist.ViewModels"
+             d:DataContext="{d:DesignInstance {x:Type vm:StatisticViewModel}}"
              d:DesignHeight="450" d:DesignWidth="800">
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
             <i:InvokeCommandAction Command="{Binding ComputeStatisticCommand}"/>
         </i:EventTrigger>
     </i:Interaction.Triggers>
-    <Grid>
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock  Text="Статистика"
-                       FontSize="30">
-                <TextBlock.Effect>
-                    <DropShadowEffect ShadowDepth="1" />
-                </TextBlock.Effect>
-            </TextBlock>
-            <TextBlock HorizontalAlignment="Center" Margin="0, 10">
-                Число книг <Run Text="{Binding BooksCount, Mode=OneWay}"/> штук
-            </TextBlock>
-        </StackPanel>
-    </Grid>
+    <TabControl>
+        <TabItem Header="Книги">
+            <GroupBox Header="Бестселлеры">
+                <DataGrid ItemsSource="{Binding BestSellers}">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Книга" Width="*" Binding="{Binding Book.Name}"/>
+                        <DataGridTextColumn Header="Количество продаж" Binding="{Binding SellCount}"/>
+                        <DataGridTextColumn Header="Полная стоимость" Binding="{Binding SumCost}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </GroupBox>
+        </TabItem>
+        <TabItem Header="Покупатели"></TabItem>
+        <TabItem Header="Покупатели"></TabItem>
+        <TabItem Header="Продавцы"></TabItem>
+    </TabControl>
 </UserControl>
